# rtik

./: Cargo.toml  README.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-foundation-core-operations/: 01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/milestones/v1.0-phases/02-agent-coordination-dependencies/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md
.planning/milestones/v1.0-phases/03-search-filtering-export/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-SUMMARY.md
.planning/phases/01-foundation-core-operations/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-agent-coordination-dependencies/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-search-filtering-export/: 03-02-SUMMARY.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: cli.rs  db.rs  lib.rs  main.rs  ticket.rs
tests/: integration.rs  phase3_integration.rs
