[package]
name = "rtik"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtik"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
rusqlite_migration = "2.4"
sigpipe = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
